welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-6: error: type mismatch;
 found   : Unit
 required: Boolean
			if (haveBaggle()) 
                                      ^Program:3: error: not found: value vuBiscuit
	while(vuBiscuit=="faux")
              ^