welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle(){
	var k =0
	while(vuBiscuit=="faux")
	{
		avance()
		k=k+1
	}
	return k
}
